# SPFlow

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  BENCHMARKING.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  PAPERS.md  README.md  README.rst  RELEASE.md  TODOs.md  VERSIONING.md  base_distributions.py  clipper.py  conftest.py  cspn.py  distributions.py  faq.html  generate_visualizations.py  genindex.html  getting_started.html  index.html  layers.py  objects.inv  py-modindex.html  pyproject.toml  rat_spn.py  requirements.txt  sb3.py  search.html  searchindex.js  setup.cfg  (+3 more)
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: faq.doctree  getting_started.doctree  index.doctree
.doctrees/api/: base_modules.doctree  conv.doctree  exceptions.doctree  index.doctree  interfaces.doctree  learning.doctree  leaves.doctree  module_shape.doctree  operations.doctree  products.doctree  rat_spn.doctree  scope.doctree  sums.doctree  utilities.doctree  wrappers.doctree
.doctrees/guides/: dev_guide.doctree  user_guide.doctree
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  codecov.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yaml
.github/actions/: run_tests.yml
.github/workflows/: deploy_pages.yml  docs.yaml  github-actions-build-python.yaml  github-actions-build-python.yml  publish-to-pypi.yml  pythonpackage.yml
.pytest_mpl_cache/: fontlist-v390.json
Documentation/: Dependencies.py  __init__.py  basics.py
Prometheus/: data.py  disc.py  nodes.py
_downloads/2fe8097a22ea753af5a120cacad0f35c/: parametric_spn.ipynb
_downloads/3715488afb2fa2d9e5039485adb40e88/: plot_tractable_inference.ipynb
_downloads/3a7b7b0473a6a6f9288106e4f56ecb06/: plot_learn_spn_classifier.ipynb
_downloads/45770857e0dd74d238cf4a10d1ad4dd5/: multivariate_leaf.ipynb
_downloads/7141f66b47bedca45ef690543746c68e/: mixed_spn.ipynb
_downloads/83b032f76dfbb97b853cb36d2ff23e1d/: cnets.ipynb
_downloads/b71ac6e9745a2154668db675c29ca1dc/: plot_spn_object_hierarchy.ipynb
_downloads/be7ed69d9e5adf1b7dadc518dce645ac/: plot_spn_dsl.ipynb
_downloads/ce2b615447c3f85fac24ad8213c908a0/: plot_marginalize.ipynb
_modules/: index.html
_modules/spflow/: exceptions.html
_sources/: faq.rst.txt  index.rst.txt
_sources/api/: conv.rst.txt  index.rst.txt  interfaces.rst.txt  learning.rst.txt  module_shape.rst.txt  products.rst.txt  rat_spn.rst.txt  wrappers.rst.txt
_sources/auto_examples/: index.rst.txt
_sources/usage/: quickstart.rst.txt
_static/: documentation_options.js
api/: base_modules.html  conv.html  exceptions.html  index.html  interfaces.html  learning.html  leaves.html  module_shape.html  operations.html  products.html  rat_spn.html  scope.html  sums.html  utilities.html  wrappers.html
auto_examples/: index.html
auto_examples/language/: plot_spn_dsl.html  plot_spn_object_hierarchy.html  sg_execution_times.html
auto_examples/models/: cnets.html  mixed_spn.html  multivariate_leaf.html  parametric_spn.html  plot_learn_spn_classifier.html  sg_execution_times.html
auto_examples/queries/: plot_marginalize.html  plot_tractable_inference.html  sg_execution_times.html
benchmark/: rat_spn_mnist.py
data/: nips100.csv
design-concept/: draft.ipynb
design-concept/img/: sampling_context_example_2.drawio
design-concept/uml/: all.puml  dispatch_cache.puml  dispatch_context.puml  layers.puml  memoize.puml  module.puml  nesting_module.puml  nodes.puml  sampling_context.puml  scope.puml
docs/: .gitignore  Makefile  README.md  api.rst  architecture.rst  conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/api/: distributions.rst  exceptions.rst  index.rst  leaf.rst  learning.rst  meta.rst  modules.rst  utils.rst
docs/examples/: README.txt  index.rst
docs/source/: concepts.rst  conf.py  faq.rst  getting_started.rst  index.rst
docs/tutorials/: index.rst  user_guide.ipynb
docs/usage/: installation.rst  quickstart.rst
documentation/: api.html  developing.html
envs/: pick_place.py
envs/nut_assembly_env/: nut_assembly.py
experiments/: cspn_sac_sb3.py  inpect_cspn_mnist_gen.py  inspect_cspn_mnist_gen.py  inspect_sb3_policy.py  plot_log_csv.py  simfw_nutenv.py  simfw_pickplace.py  simfw_with_sb3.py  test_exp_tanh_squashing.py  timing_test.py  train_cspn_mnist_compl.py  train_cspn_mnist_gen.py  train_cspn_stl10_compl.py  train_mnist.py
guides/: dev_guide.html  user_guide.html  user_guide.ipynb  user_guide2.ipynb  user_guide2.ipynb.REMOVED.git-id
scripts/: benchmark_linsum_simple.py  benchmark_sumlayer_simple.py  coverage_inspect.py  generate_visualizations.py  profile_gradient_descent_classification.py  profile_histogram_log_prob.py  profile_piecewise_linear_vectorization.py  profile_sampling_routing.py  train_apc_mnist.py
spflow/: __init__.py  autoleaf.py  dsl.py  exceptions.py  user_guide.ipynb
spflow/devtools/: __init__.py  coverage_inspect.py
spflow/distributions/: __init__.py  base.py  bernoulli.py  binomial.py  categorical.py  distribution.py  exponential.py  gamma.py  geometric.py  hypergeometric.py  log_normal.py  negative_binomial.py  normal.py  poisson.py  uniform.py
spflow/interfaces/: __init__.py  classifier.py  sklearn.py
spflow/learn/: __init__.py  build_socs.py  chow_liu.py  cnet.py  continuous_mixtures.py  em.py  expectation_maximization.py  gradient_descent.py  hclt.py  learn_spn.py  optimization.py  prometheus.py
spflow/measures/: __init__.py  _utils.py  information_theory.py  weight_of_evidence.py
spflow/meta/: __init__.py  region_graph.py
spflow/modules/: __init__.py  base.py  base_product.py  cross_product.py  elementwise_product.py  elementwise_sum.py  factorize.py  leaf_module.py  (+8 more)
spn/: base_distributions.py  cspn.py  layers.py
src/: LICENSE.md  README.md  Untitled.ipynb  create_pip_dist.sh  deepnotebook.ipynb  deepnotebook.ipynb.REMOVED.git-id  run_tests.sh  setup.py  t_script.py  upload_pip.sh
tests/: README.md  conftest.py  contract_data.py  fixtures.py  test_scope.py
usage/: installation.html  quickstart.html
(+4825 files in other folders)
