[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spflow"
version = "0.0.46"
description = "Sum Product Flow: An Easy and Extensible Library for Sum-Product Networks"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Alejandro Molina et al.", email = "molina@cs.tu-darmstadt.de"},
    {name = "Steven Braun", email = "steven.braun@cs.tu-darmstadt.de"}
]
requires-python = ">=3.10,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.22.4,<2.3.0",
    "scikit-learn>=1.4.0",
    "statsmodels>=0.14.0",
    "scipy>=1.10.0",
    "networkx>=3.0",
    "joblib>=1.0.0",
    "matplotlib>=3.6.0",
    "pydot>=2.0.0",
    "lark-parser>=0.9.0",
    "tqdm>=4.1.0",
    "ete3>=3.1.1",
    "sympy>=1.7.0",
    "PyQt5>=5.15.10; sys_platform != 'win32'",
    "arff>=0.9",
    "tensorflow>=2.18.0",
    "tensorflow-probability[tf]>=0.24.0",
    "torch>=2.3.0",
    "torchvision>=0.18"
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
    "pytest-xdist>=3.8.0"
]
dev = [
    "build>=1.3.0",
    "twine>=6.2.0",
]

[project.urls]
Homepage = "https://github.com/SPFlow/SPFlow"
Repository = "https://github.com/SPFlow/SPFlow.git"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"spn.algorithms.splitting" = ["*.R"]

[tool.black]
line-length = 120
