[metadata]
name = spflow
url = https://github.com/SPFlow/SPFlow
author = attr: spflow.__author__
version = attr: spflow.__version__
description = Sum Product Flow: An Easy and Extensible Library for Sum-Product Networks
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
keywords = probabilistic circuits, machine learning
license = TODO
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Natural Language :: English

[options]
package_dir=
    =src
packages = spflow
install_requires =
    plum-dispatch>=1.7.4
    numpy>=1.17.4
    scipy>=1.5.0
    torch>=1.6.0
    scikit-learn>=1.0

[options.extras_require]
dev =
    mypy>=0.770
    flake8~=6.0; python_version>=3.8
    pytest

# https://github.com/PyCQA/flake8/issues/234
[flake8]
max-complexity = 10
max-line-length = 120
j = 0
format = pylint
doctests = true
count = True
statistics = True
show-source = True
select = E9, F63, F7, F82
